# goit-algo2-hw-10

./: README.md  pyproject.toml
app/: task1.py  task2.py
